--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="inicio.css" />
-    <title>Mi Propia Web</title>
+    <title>Sistemas y web</title>
   </head>
   <body>
   <div id="cabecera">
@@ -17,11 +17,11 @@
 		<div class="vacio"></div>
  </div>
   <div id="texto">
-    <p>Hola, estoy aprendiendo a hacer Webs y este es mi primer párrafo, 
+    <p>Hola, bienvenido a mi página web estoy aprendiendo a hacer Webs y este es mi primer párrafo, 
        no es muy largo, pero es un párrafo.</p>
     <p>Este ya es mi segundo párrafo. Para construir un sitio web como éste, 
        hay que usar el lenguaje HTML. El HTML es un lenguaje de etiquetas.
-       Con las etiquetas indicamos qué tipo de contenido insertamos en la página.</p>
+       Con las etiquetas indicamos qué tipo de contenido insertamos en la página. Empezemos</p>
   </div>
   <div id="enlaces">
     <h3>Los enlaces</h3>
@@ -51,18 +51,18 @@
   <div id="pie">
     <div class="col_pie">
       <h4>Sobre este sitio</h4>
-      <p>Propiedad de : Nombre Apellido</p>
-      <p>Webmaster: Nombre Apellido</p>
+      <p>Propiedad de : Gael Guzmán</p>
+      <p>Webmaster: Gael Guzmán</p>
     </div>
     <div class="col_pie">
       <h4>Contactos</h4>
-      <p>Email : miemail@servidor.com</p>
-      <p>Teléfono: 900-00-00-00</p>
+      <p>Email : 22191589@cobachih.edu.mx</p>
+      <p>Teléfono: 656 886 2440</p>
     </div>
     <div class="col_pie">
       <h4>En las redes</h4>
-      <p>Facebook : (dirección de Facebook)</p>
-      <p>Twitter: (dirección de Twitter)</p>
+      <p>Facebook : (https://www.facebook.com/)</p>
+      <p>X: (https://x.com/)</p>
     </div>
     <div class="vacio"></div>
   </div>
